force-app/main/default/objects/cgcloud__Payment_Tactic__c/cgcloud__Payment_Tactic__c.object-meta.xml
<CustomObject>
    <description>Represents the junction object between a payment and tactic(s)</description>
    <label>Payment Tactic</label>
    <nameField>
        <displayFormat>PTC-{00000000}</displayFormat>
        <label>Claim Tactic ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment Tactics</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>