force-app/main/default/objects/cgcloud__Payment_Tactic__c/fields/cgcloud__Adjustment_Type__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Adjustment_Type__c</fullName>
    <description>Adjustment type of the payment</description>
    <label>Adjustment Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>