force-app/main/default/objects/cgcloud__Payment_Tactic__c/fields/cgcloud__Amount_Offset__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Amount_Offset__c</fullName>
    <formula>ABS( cgcloud__Tactic_Payout__c  -  cgcloud__Payment_Tactic_Fund_Summary__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount Offset</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>