force-app/main/default/objects/cgcloud__Payment_Tactic__c/fields/cgcloud__Anchor__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Anchor__c</fullName>
    <formula>cgcloud__Tactic__r.cgcloud__Anchor__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Anchor</label>
    <type>Text</type>
</CustomField>