force-app/main/default/objects/cgcloud__Payment_Tactic__c/fields/cgcloud__Calculation_Date_From__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Calculation_Date_From__c</fullName>
    <description>Defines the start of the calculation time range for this payment tactic</description>
    <formula>IF(ISBLANK(cgcloud__Custom_Calculation_Date_From__c),
cgcloud__Tactic__r.cgcloud__Date_From__c,cgcloud__Custom_Calculation_Date_From__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Calculation Date From</label>
    <type>Date</type>
</CustomField>