force-app/main/default/objects/cgcloud__Payment_Tactic__c/fields/cgcloud__Calculation_Date_Thru__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Calculation_Date_Thru__c</fullName>
    <description>Defines the end of the calculation time range for payment tactic</description>
    <formula>IF(ISBLANK(cgcloud__Custom_Calculation_Date_Thru__c),
cgcloud__Tactic__r.cgcloud__Date_Thru__c,cgcloud__Custom_Calculation_Date_Thru__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Calculation Date Thru</label>
    <type>Date</type>
</CustomField>