force-app/main/default/objects/cgcloud__Payment_Tactic__c/fields/cgcloud__Custom_Calculation_Date_From__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Custom_Calculation_Date_From__c</fullName>
    <description>Custom Calculation Date From</description>
    <label>Custom Calculation Date From</label>
    <type>Date</type>
</CustomField>