force-app/main/default/objects/cgcloud__Payment_Tactic__c/fields/cgcloud__Custom_Calculation_Date_Thru__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Custom_Calculation_Date_Thru__c</fullName>
    <description>Custom Calculation Date Thru</description>
    <label>Custom Calculation Date Thru</label>
    <type>Date</type>
</CustomField>