force-app/main/default/objects/cgcloud__Payment_Tactic__c/fields/cgcloud__End_Date__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__End_Date__c</fullName>
    <formula>cgcloud__Tactic__r.cgcloud__Date_Thru__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date Thru</label>
    <type>Date</type>
</CustomField>