force-app/main/default/objects/cgcloud__Payment_Tactic__c/fields/cgcloud__Fund_Distribution_Metric__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Fund_Distribution_Metric__c</fullName>
    <description>Fund Distribution metrics of KPI</description>
    <label>Fund Distribution Metric</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>LE_Volume__c</fullName>
                <default>true</default>
                <label>LE_Volume__c</label>
            </value>
            <value>
                <fullName>LE_Revenue__c</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>