force-app/main/default/objects/cgcloud__Payment_Tactic__c/fields/cgcloud__Has_Calculated_Amount__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Has_Calculated_Amount__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Calculated Amount</label>
    <type>Checkbox</type>
</CustomField>