force-app/main/default/objects/cgcloud__Payment_Tactic__c/fields/cgcloud__Internal_Id__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Internal_Id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>Internal Id</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>