force-app/main/default/objects/cgcloud__Payment_Tactic__c/fields/cgcloud__KPI_Subset__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__KPI_Subset__c</fullName>
    <formula>TEXT(cgcloud__Payment__r.cgcloud__Payment_Template__r.cgcloud__KPI_Subset__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>KPI Subset</label>
    <type>Text</type>
</CustomField>