force-app/main/default/objects/cgcloud__Payment_Tactic__c/fields/cgcloud__Payment__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Payment__c</fullName>
    <label>Claim Name</label>
    <referenceTo>cgcloud__Payment__c</referenceTo>
    <relationshipLabel>Tactics</relationshipLabel>
    <relationshipName>Payment_Tactics</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>