force-app/main/default/objects/cgcloud__Payment_Tactic__c/fields/cgcloud__Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Payment_Method__c</fullName>
    <formula>Text(cgcloud__Tactic__r.cgcloud__Payment_Method__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Claim Method</label>
    <type>Text</type>
</CustomField>