force-app/main/default/objects/cgcloud__Payment_Tactic__c/fields/cgcloud__Payment_Status__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Payment_Status__c</fullName>
    <label>Claim Status</label>
    <length>20</length>
    <type>Text</type>
</CustomField>