force-app/main/default/objects/cgcloud__Payment_Tactic__c/fields/cgcloud__Pending_Amount__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Pending_Amount__c</fullName>
    <formula>cgcloud__Tactic__r.cgcloud__Pending_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pending</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>