force-app/main/default/objects/cgcloud__Payment_Tactic__c/fields/cgcloud__Promotion_Slogan__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Promotion_Slogan__c</fullName>
    <formula>cgcloud__Tactic__r.cgcloud__Promotion__r.cgcloud__Slogan__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Promotion Slogan</label>
    <type>Text</type>
</CustomField>