force-app/main/default/objects/cgcloud__Payment_Tactic__c/fields/cgcloud__Promotion_Tactic__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Promotion_Tactic__c</fullName>
    <formula>HYPERLINK(&quot;/one/one.app#/sObject/&quot; &amp; Id &amp; &quot;/view&quot;,   cgcloud__Tactic__r.cgcloud__Promotion__r.cgcloud__Slogan__c &amp;&apos; - &apos;&amp; cgcloud__Tactic__r.cgcloud__Tactic_Template__r.cgcloud__Description__c  )</formula>
    <label>Promotion - Tactic</label>
    <type>Text</type>
</CustomField>