force-app/main/default/objects/cgcloud__Payment_Tactic__c/fields/cgcloud__Requires_Fund__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Requires_Fund__c</fullName>
    <formula>cgcloud__Payment__r.cgcloud__Payment_Template__r.cgcloud__Requires_Funds__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Requires Fund</label>
    <type>Checkbox</type>
</CustomField>