force-app/main/default/objects/cgcloud__Payment_Tactic__c/fields/cgcloud__Tactic__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Tactic__c</fullName>
    <label>Tactic</label>
    <referenceTo>cgcloud__Tactic__c</referenceTo>
    <relationshipLabel>Tactics</relationshipLabel>
    <relationshipName>Payment_Tactics</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>