force-app/main/default/objects/cgcloud__Payment_Tactic__c/fields/cgcloud__Tactic_Description__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Tactic_Description__c</fullName>
    <description>Payment Tactic Layout</description>
    <formula>HYPERLINK(&quot;/one/one.app#/sObject/&quot; &amp; Id &amp; &quot;/view&quot;,  cgcloud__Tactic__r.cgcloud__Tactic_Template__r.cgcloud__Description__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tactic Description</label>
    <type>Text</type>
</CustomField>