force-app/main/default/objects/cgcloud__Payment_Tactic__c/fields/cgcloud__Tactic_Payout__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Tactic_Payout__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Tactic Payout</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>