force-app/main/default/objects/cgcloud__Payment_Tactic__c/fields/cgcloud__Tactic_Template__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Tactic_Template__c</fullName>
    <formula>cgcloud__Tactic__r.cgcloud__Tactic_Template__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tactic Template</label>
    <type>Text</type>
</CustomField>