force-app/main/default/objects/cgcloud__Payment_Tactic__c/recordTypes/cgcloud__Default.recordType-meta.xml
<RecordType>
    <fullName>cgcloud__Default</fullName>
    <active>true</active>
    <label>Default</label>
</RecordType>