force-app/main/default/objects/cgcloud__Payment_Tactic__c/recordTypes/cgcloud__PaymentOverwrite.recordType-meta.xml
<RecordType>
    <fullName>cgcloud__PaymentOverwrite</fullName>
    <active>true</active>
    <description>The Sales Org of the Payment has the Enable Payment Overwrite check to true</description>
    <label>PaymentOverwrite</label>
</RecordType>