force-app/main/default/objects/cgcloud__Payment_Tactic__c/validationRules/cgcloud__Payout_Must_Be_Positive.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Payout_Must_Be_Positive</fullName>
    <active>true</active>
    <description>Positive Payment Tactic only can be linked with positive payments</description>
    <errorConditionFormula>!ISBLANK(cgcloud__Payment__r.cgcloud__Payment_Amount__c) &amp;&amp; cgcloud__Payment__r.cgcloud__Payment_Amount__c &gt;= 0 &amp;&amp;  cgcloud__Tactic_Payout__c &lt;0</errorConditionFormula>
    <errorDisplayField>cgcloud__Tactic_Payout__c</errorDisplayField>
    <errorMessage>The amount can&apos;t be negative.</errorMessage>
</ValidationRule>