force-app/main/default/objects/cgcloud__Payment_Tactic__c/validationRules/cgcloud__Payout_Must_Be_Postive_Or_Negative.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Payout_Must_Be_Postive_Or_Negative</fullName>
    <active>true</active>
    <description>Payment Tactic Payout can&apos;t be 0</description>
    <errorConditionFormula>cgcloud__Tactic_Payout__c == 0</errorConditionFormula>
    <errorDisplayField>cgcloud__Tactic_Payout__c</errorDisplayField>
    <errorMessage>The amount can&apos;t be 0.</errorMessage>
</ValidationRule>