force-app/main/default/objects/cgcloud__Payment_Tactic__c/validationRules/cgcloud__Payout_Not_Null.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Payout_Not_Null</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK( cgcloud__Tactic_Payout__c )</errorConditionFormula>
    <errorDisplayField>cgcloud__Tactic_Payout__c</errorDisplayField>
    <errorMessage>The amount can&apos;t be null.</errorMessage>
</ValidationRule>