force-app/main/default/objects/cgcloud__Payment_Tactic__c/validationRules/cgcloud__PromotionType_Not_Promotion.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__PromotionType_Not_Promotion</fullName>
    <active>true</active>
    <errorConditionFormula>cgcloud__Tactic__r.cgcloud__Promotion__r.RecordType.Name  &lt;&gt; &apos;Promotion&apos;</errorConditionFormula>
    <errorMessage>Tactics from sellable promotions can’t be linked to claims.</errorMessage>
</ValidationRule>