force-app/main/default/objects/cgcloud__Payment_Tactic__c/listViews/cgcloud__All.listView-meta.xml
<ListView>
    <fullName>cgcloud__All</fullName>
    <columns>NAME</columns>
    <columns>cgcloud__Payment__c</columns>
    <columns>cgcloud__Tactic__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>