force-app/main/default/objects/cgcloud__Payment_Tactic__c/listViews/cgcloud__All1.listView-meta.xml
<ListView>
    <fullName>cgcloud__All1</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>